eks.ver/ver.4-new/db-new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coupon-mysql
    #namespace: app  # Deployment를 사용할 네임스페이스
  labels:
    app: coupon-mysql
spec:
  replicas: 1 # 배포할 Pod의 수
  selector:
    matchLabels:
      app: coupon-mysql  # Pod 선택 기준
  strategy:
    type: Recreate  # 기존 Pod를 삭제하고 새 Pod를 생성하는 전략
  template:
    metadata:
      labels:
        app: coupon-mysql  # Pod에 적용할 레이블
    spec:
      securityContext:
        fsGroup: 999
        runAsUser: 999
      containers:
        - name: coupon-mysql
          image: mysql:8.0 # 사용할 MySQL Docker 이미지
          args:
            - mysqld
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_unicode_ci
            - --explicit_defaults_for_timestamp=1
          livenessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - -h
                - localhost
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          ports:
            - containerPort: 3306
              protocol: TCP # MySQL의 기본 포트
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-pvc
      restartPolicy: Always # Pod의 재시작 정책
      volumes:
        - name: mysql-pvc
          persistentVolumeClaim:
            claimName: mysql-pvc  # 사용될 PVC
---
apiVersion: v1
kind: Service
metadata:
  name: coupon-mysql
    #namespace: app # Service를 사용할 네임스페이스
  labels:
     app: coupon-mysql
spec:
  selector:
    app: coupon-mysql  # Deployment와 연결할 때 사용할 레이블
  ports:
   - name: mysql
     port: 3306 # Service에서 노출할 포트
     targetPort: 3306 # 컨테이너에서 실제로 사용하는 포트
