eks.ver/ver.4-new/shop-front-new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-front
    #namespace: app
  labels:
    app: shop-front  # Deployment에 대한 레이블 설정
spec:
  replicas: 1 # Pod의 복제 수
  selector:
    matchLabels:
      app: shop-front  # Pod 선택을 위한 레이블
  template:
    metadata:
      labels:
         app: shop-front # Pod에 적용할 레이블
    spec:
      containers:
        - name: shop-front
          image: cloudbreak6th/shop-front:v2.0  # 컨테이너 이미지
          ports:
            - containerPort: 80  # 컨테이너에서 사용할 포트
      restartPolicy: Always # Pod의 재시작 정책
---
apiVersion: v1
kind: Service
metadata:
  name: shop-front
    #namespace: app
spec:
  ports:
    - protocol: TCP
      port: 80 # Service에서 노출할 포트
      targetPort: 80  # 컨테이너의 포트
  selector:
    app: shop-front  # Deployment와 연결할 레이블
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
    #namespace: app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing  # ALB를 인터넷에서 접근 가능하도록 설정
    alb.ingress.kubernetes.io/target-type: ip  # ALB가 Pod IP를 대상으로 설정
spec:
  ingressClassName: alb # ALB Ingress 클래스 지정
  rules:
    #- host:  # 실제 도메인으로 변경해야 함
    - http:
        paths:
          - path: /
            pathType: Prefix  # 요청 URL의 접두사에 따라 라우팅
            backend:
              service:
                name: shop-front  # 요청을 전달할 서비스 이름
                port:
                  number: 80  # 서비스의 포트
